# Realtime_PPE_Detection

./: .env.example  LICENSE  README.md  pipeline.py  pyproject.toml  setup_env.sh  train.ipynb
data/: data_download.py  data_preprocess.py  data_processing.py
notebooks/: data_preprocess.ipynb
src/deployment/: fastapi_app.py  streamlit_app.py
src/deployment/templates/: index.html  result.html
src/training/: train_yolov8.py  training.py
