[project]
name = "ppe-detection"
version = "0.1.0"
description = "Real-time PPE detection using YOLO/RT-DETR"
authors = [{ name="Arindam Singha"}]
requires-python = ">=3.9"

dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python",
    "numpy",
    "matplotlib",
    "roboflow",
    "supervision",
    "fastapi",
    "uvicorn",
    "pandas>=2.3.3",
]

[tool.uv]
isolated = true
