[project]
name = "ppe-detection"
version = "0.1.0"
description = "Real-time PPE detection using YOLO/RT-DETR"
authors = [{ name="Arindam Singha"}]
requires-python = ">=3.9"

dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python",
    "numpy",
    "matplotlib",
    "roboflow",
    "supervision",
    "fastapi",
    "uvicorn",
    "pandas>=2.3.3",
    "torch",
    "torchvision",
    "markupsafe>=2.1.3,<3.0.0",
    "ipykernel>=6.31.0",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "dotenv>=0.9.9",
    "streamlit>=1.50.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

